changed the hero subheading

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="left-content">
           <p class="welcome">Welcome to</p>
           <h1>The Laura Gazette</h1>
-          <p>A family newsletter where old precious memories meet new precious updates</p>
+          <p>A family newsletter where old precious memories meet new chapters in the making</p>
           <div class="btn-group">
             <a class="btn1" href="#about">Tell Me More</a>
             <a class="btn2" href="#signup">Count Me In &rarr;</a>
