--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <button type="submit">Submit</button>
       </form>
       <div class="right-side-form">
-        <img src="./assets/HeroImg.png" alt="">
+        <img src="./assets/finalcollage.png" alt="">
       </div>
     </div>
     </div>
