plug form action

--- a/index.html
+++ b/index.html
@@ -86,37 +86,37 @@
 
   <section class="signup" id="signup">
     <div class="container">
-    <h3>Stay In The Loop</h3>
-    <h5>Get Your Gazette</h5>
-    <div class="form-flex">
-      <form class="form" action="" method="post">
-        <div class="form-group">
-          <label for="first_name">First Name</label>
-          <input type="text" id="first_name" name="first_name"  required>
+      <h3>Stay In The Loop</h3>
+      <h5>Get Your Gazette</h5>
+      <div class="form-flex">
+        <form class="form" action="https://app.kit.com/forms/8134628/subscriptions" method="post">
+          <div class="form-group">
+            <label for="first_name">First Name</label>
+            <input type="text" id="first_name" name="first_name" required>
+          </div>
+          <div class="form-group">
+            <label for="last_name">Last Name</label>
+            <input type="text" id="last_name" name="fields[last_name]" required>
+          </div>
+          <div class="form-group">
+            <label for="birthday">Birthday</label>
+            <input type="date" id="birthday" name="fields[birthday]" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email_address" required>
+          </div>
+          <button type="submit">Submit</button>
+        </form>
+        <div class="right-side-form">
+          <img src="./assets/finalcollage.png" alt="">
         </div>
-        <div class="form-group">
-          <label for="last_name">Last Name</label>
-          <input type="text" id="last_name" name="fields[last_name]"  required>
-        </div>
-        <div class="form-group">
-          <label for="birthday">Birthday</label>
-          <input type="date" id="birthday" name="fields[birthday]" required>
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email_address"  required>
-        </div>
-        <button type="submit">Submit</button>
-      </form>
-      <div class="right-side-form">
-        <img src="./assets/finalcollage.png" alt="">
       </div>
-    </div>
     </div>
   </section>
   <footer class="footer" id="footer">
     <div class="container">
-        <p>© 2025 The Laura Gazette. All rights reserved.</p>
+      <p>© 2025 The Laura Gazette. All rights reserved.</p>
     </div>
 
   </footer>
