--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <h3>Stay In The Loop</h3>
       <h5>Get Your Gazette</h5>
       <div class="form-flex">
-        <form class="form" action="https://app.kit.com/forms/8134628/subscriptions" method="post">
+        <form class="form" action="https://app.convertkit.com/forms/8134628/subscriptions" method="post">
           <div class="form-group">
             <label for="first_name">First Name</label>
             <input type="text" id="first_name" name="first_name" required>
