added favicon changed subheading adjusted spacing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="description"
+    content="The Laura Gazette is a heartfelt family newsletter celebrating memories, milestones, and the enduring spirit of Grandma Laura.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
@@ -12,7 +15,11 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
-  <title>The Laura Gazette</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <title>The Laura Gazette | A Family Newsletter</title>
 </head>
 
 <body>
@@ -37,7 +44,7 @@
         <div class="left-content">
           <p class="welcome">Welcome to</p>
           <h1>The Laura Gazette</h1>
-          <p>A family newsletter where old precious memories meet new chapters in the making</p>
+          <p>A family newsletter where old precious memories meet new moments unfolding</p>
           <div class="btn-group">
             <a class="btn1" href="#about">Tell Me More</a>
             <a class="btn2" href="#signup">Count Me In &rarr;</a>
